# pixeon-medical-challenge

./: .gitignore  CMakeLists.txt  README.md
include/core/: AuthManager.hpp  GlobalState.hpp  LoginController.hpp  MainController.hpp  PerfilModel.hpp  SafeQueue.hpp  Worker.hpp
include/ui/: DoctorView.hpp  LoginView.hpp  MainWindow.hpp  MedicalRecordView.hpp  PatientSelectionView.hpp  ReceptionView.hpp
resources/: pacientes.json  perfis.json  resources.qrc
src/: main.cpp
src/core/: AuthManager.cpp  GlobalState.cpp  LoginController.cpp  MainController.cpp  PerfilModel.cpp  Worker.cpp
src/ui/: DoctorView.cpp  LoginView.cpp  MainWindow.cpp  MedicalRecordView.cpp  PatientSelectionView.cpp  ReceptionView.cpp
tests/: CMakeLists.txt  main_tests.cpp
